# fuel-logger-rs

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml.example  flake.nix  prek.toml  rust-toolchain.toml
.github/workflows/: ci.yml
deploy/: fuel-logger-rs.service  install.sh  update.sh
src/: config.rs  db.rs  gpio.rs  main.rs  modbus.rs  models.rs  routes.rs  snapshot.rs  state.rs  station.rs  tuf2000.rs  wiegand.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css
web/src/pages/: LogsPage.tsx  StationsPage.tsx  StatsPage.tsx  UsersPage.tsx
