[package]
name = "fuel-logger-rs"
version = "0.1.0"
edition = "2021"
description = "Fuel station logger for Raspberry Pi with Wiegand reader, GPIO control, and web UI"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# GPIO (Raspberry Pi) – only on real hardware
rppal = { version = "0.18", features = ["hal"], optional = true }

# Configuration
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "1"
toml = "1.0.7"

[features]
default = []
gpio = ["rppal"]

[profile.release]
strip = true
